--- a/demo-provider/src/main/resources/application.properties
+++ b/demo-provider/src/main/resources/application.properties
@@ -54,3 +54,12 @@ server.context-path=/
 spring.mvc.view.prefix=/WEB-INF/jsp/
 # \u54CD\u5E94\u9875\u9762\u9ED8\u8BA4\u540E\u7F00
 spring.mvc.view.suffix=.jsp
+
+#######################################################
+### dubbo configuration
+#######################################################
+spring.dubbo.application.name=provider1
+spring.dubbo.registry.address=zookeeper://10.0.2.69:2181
+spring.dubbo.protocol.name=dubbo
+spring.dubbo.protocol.port=20880
+spring.dubbo.scan=org.demo.provider.dubbo
