--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>microservice</groupId>
 	<artifactId>microservice</artifactId>
@@ -9,8 +8,9 @@
 	<modules>
 		<module>demo-provider</module>
 		<module>demo-consumer</module>
-		<module>demo-api</module> 
-	</modules>
+		<module>demo-api</module>
+		<module>demo-entity</module>
+  </modules>
 	<!-- spring boot parent -->
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -35,9 +35,7 @@
 	<properties>
 		<!-- Common libs -->
 		<java.version>1.8</java.version>
-		<!-- 
 		<spring_version>3.2.16.RELEASE</spring_version>
-		
 		<javassist_version>3.20.0-GA</javassist_version>
 		<netty_version>3.2.5.Final</netty_version>
 		<mina_version>1.1.7</mina_version>
@@ -66,35 +64,16 @@
 		<guice_version>3.0</guice_version>
 		<cglib_version>2.2</cglib_version>
 		<webx_version>3.0.8</webx_version>
-		 -->
-		<!-- Log libs 
 		<slf4j_version>1.7.25</slf4j_version>
 		<jcl_version>1.1</jcl_version>
 		<log4j_version>1.2.16</log4j_version>
-		<logback_version>1.2.2</logback_version>
-		-->
-		<!-- Test libs 
 		<junit_version>4.10</junit_version>
 		<easymock_version>3.0</easymock_version>
 		<jmockit_version>0.999.8</jmockit_version>
-		-->
-		<!-- Build args 
-		<argline>-server -Xms64m -Xmx256m -XX:PermSize=64m
-			-XX:MaxPermSize=128m -Dfile.encoding=UTF-8
-			-Djava.net.preferIPv4Stack=true</argline>
-		<skip_maven_deploy>false</skip_maven_deploy>
-		<updateReleaseInfo>true</updateReleaseInfo>
-		<project.build.sourceEncoding>${file_encoding}</project.build.sourceEncoding>
-		<profile.name>oss</profile.name>
-		<maven_compiler_plugin_version>3.5.1</maven_compiler_plugin_version>
-		<java_source_version>1.6</java_source_version>
-		<java_target_version>1.6</java_target_version>
-		<file_encoding>UTF-8</file_encoding>
-		-->
 	</properties>
 
 	<dependencies>
-		<!-- dubbo  
+		<!-- dubbo  -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>dubbo</artifactId>
@@ -237,11 +216,13 @@
 			<artifactId>commons-logging-api</artifactId>
 			<version>${jcl_version}</version>
 		</dependency>
+		<!-- -->
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>${log4j_version}</version>
 		</dependency>
+		 
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -271,7 +252,6 @@
 			<artifactId>cglib-nodep</artifactId>
 			<version>${cglib_version}</version>
 		</dependency>
-		-->
 		
 		<!-- spring boot -->
 		<!-- spring web dependency -->
