--- a/demo-api/pom.xml
+++ b/demo-api/pom.xml
@@ -17,10 +17,9 @@
   </properties>
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
+      <groupId>microservice</groupId>
+      <artifactId>demo-entity</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
     </dependency>
   </dependencies>
 </project>
